--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="text/babel" src="js/app.js"></script>
-    <script src="js/format.js"></script>
+    <script type="text/babel" src="js/app.js?v=20251104"></script>
+<script src="js/format.js"></script>
   </body>
 </html>
+
